--- a/index.html
+++ b/index.html
@@ -2,16 +2,13 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>动态3D圣诞树</title>
+    <title>雷子涵圣诞节快乐</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <canvas id="christmas-tree-canvas"></canvas>
     <div id="snowflakes"></div>
     <div id="ornaments"></div>
-    <div id="tree-container" class="hidden">
-        <!-- Canvas 已替代图片显示 -->
-    </div>
 
     <script src="script.js"></script>
 </body>
